--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,12 +23,25 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoggedActivity" />
-        <activity
-            android:name=".LoginActivity2"
-            android:label="@string/title_activity_login2" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegistrationActivity" />
-        <activity android:name=".WAHF"></activity>
+        <activity android:name=".WAHF" />
+        <activity
+            android:name=".ProjectForm"
+            android:label="@string/title_activity_project_form"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DashboardUser"
+            android:label="@string/title_activity_dashboard_user"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DashboardLeader"
+            android:label="@string/title_activity_dashboard_leader"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ChatScreen"
+            android:label="@string/title_activity_chat_screen"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
